--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-    background: linear-gradient(to bottom, rgb(100, 100, 100), rgb(33, 33, 33));
+    background: rgb(242, 233, 196);
     background-attachment: fixed;
     margin: 0 max(10vw, calc(50vw - 500px));
 }
@@ -15,8 +15,22 @@ a, a:hover{
 
 #myhead{
     color: black;
+    padding: 0% 2% 2% 2%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#mainHead{
+    color: black;
     padding: 2%;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.baskerville{
+    font-family: Baskerville,Baskerville Old Face,Hoefler Text,Garamond,Times New Roman,serifbaskerville, Georgia, 'Times New Roman', Times, serif;
+}
+
+.extra-padding{
+    padding: 0 0 1vh 0;
 }
 
 .transparentCard{
@@ -25,8 +39,9 @@ a, a:hover{
 
 .backButton{
     padding: 0.5% 1.5%;
-    background-color: rgb(150, 150, 150);
-    margin: 0.5%;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    margin: 1vw 0  0 2vw;
 }
 
 iframe{
@@ -37,15 +52,41 @@ iframe{
 }
 
 .p-project{
-    color: rgb(0,0,0);
+    color: rgb(0, 0, 0);
     font-size: 18px;
     font-family: Lato, sans-serif;
     margin: 0 2vw;
     line-height: 1.6;
 }
 
+li > .p-project{
+    margin: 0 0.25vw;
+}
+
+ul {
+    margin: 0 2vw;
+}
+
+.subtitle-project{
+    color: rgb(0, 0, 0);
+    font-size: 21px;
+    font-weight: bold;
+    font-family: Lato, sans-serif;
+    margin: 0.5vw 2vw;
+    line-height: 1.6;
+}
+
+.p-pills{
+    color: rgb(128, 128, 128);
+    font-size: 12px;
+    font-family: Lato, sans-serif;
+    margin: 2vw 0;
+    line-height: 1.6;
+    font-style: italic;
+}
+
 .bgRect{
-    background-color: rgba(255,255,255,0.85);
+    background-color: rgba(128,128,128,0.66);
     width: min(80vw, calc(1000px));
     height: 100%;
     display: inline-block;
